fixed subtitle spacing and margins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,21 +54,25 @@ body {
   margin-top: 20px;
 }
 
-.subheaddiv{
-    height: 15vw;
-    background-image: url("./assets/images/subheader.png");
+.subdiv {
+    position: relative;
+    overflow: hidden;
 }
+
 /* rainbow gradient subheader img */
 .subheader {
+    position: absolute;
   width: 100vw;
-  min-height: 5vh;
-  max-height: 10vh;
+  top: 0;
+  bottom: 0;
+  object-fit: cover;
+  z-index: -1;
 }
 
 /* subtitle sitting inside subheader img */
 .subtitle {
-  margin-top: -30px ;
-  padding-bottom: 50px;
+  line-height: 50px;
+  padding: 50px;
   margin-left: 70%;
   font-size: 2rem;
   color: var(--rhythm);
@@ -83,6 +87,7 @@ body {
   color: var(--rhythm);
   width: 100%;
   border-style: solid;
+  border-width: 9px;
   border-color: var(--light-pink);
 }
 
